refactor: move settings source to a typesafe setup